# computer-graphics-assign-1

./: .gitignore  CMakeLists.txt  README.md
dependencies/glad/: glad.h
include/: Camera.h  Gui.h  Material.h  Mesh.h  Model.h  Shader.h  Vertex.h  config.h  gui.h
src/: Camera.cpp  Gui.cpp  Mesh.cpp  Model.cpp  Shader.cpp  glad.c  gouraud_ad_fragment.glsl  gouraud_ad_vertex.glsl  gouraud_ads_vertex.glsl  gui.cpp  main.cpp  phong_vertex.glsl  shader_fragment.glsl  shader_vertex.glsl
